# Plutus

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.codebuild.yml  docker-compose.yml  requirements.txt  setup.cfg
codebuild/: cd-buildspec.yml  ci-buildspec.yml
docs/: Plutus.drawio
plutus/: cli.py  main.py  util.py
plutus/api/: aws.py  binance.py  ftx.py  util.py
plutus/aws_ecs_task/: ticker_channel.py
plutus/aws_lambda/: sqs_ticker_queue.py
plutus/db/: model.py  util.py
plutus/db/alembic/: alembic.ini  env.py  script.py.mako
plutus/db/alembic/versions/: 8acadb0ca384_.py
terraform/live/global/codebuild/: main.tf
terraform/live/prod/fargate/ftx_btc_ticker_channel/: main.tf  outputs.tf  prod.tfvars  variables.tf
terraform/live/prod/rds/: main.tf  outputs.tf
terraform/live/prod/sqs/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/fargate/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/sqs/: main.tf  outputs.tf
test/: __init__.py  conftest.py
test/api/binance/: conftest.py  test_binance.py
test/api/ftx/: conftest.py  test_ftx.py
test/aws_lambda/sqs_ticker_queue/: conftest.py  test_sqs_ticker_queue.py
