[metadata]
name = plutus
version = 0.1.0
description = Crypto exchange ingress
author = Dave Rodgers
author_email = dave@gaiasolutions.llc
url = https://github.com/dtrodger/Plutus
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8